--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,14 +38,15 @@ jobs:
       - name: Run tests
         run: ./mvnw clean test
 
-      - name: Generate test report
-        uses: dorny/test-reporter@v1
+      - name: Publish test results
         if: always()
-        with:
-          name: Maven Tests
-          path: target/surefire-reports/*.xml
-          reporter: java-junit
-          fail-on-error: false
+        run: |
+          if [ -d "target/surefire-reports" ]; then
+            echo "✅ Test reports generated"
+            ls -la target/surefire-reports/
+          else
+            echo "❌ No test reports found"
+          fi
 
   build:
     needs: test
